--- a/FoodForGardens/about.html
+++ b/FoodForGardens/about.html
@@ -24,7 +24,7 @@
     <div class="navbar">
       <div class="logo"><a href="#">Food For Gardens</a></div>
       <ul class="links">
-        <li><a href="/">Home</a></li>
+        <li><a href="/#">Home</a></li>
       <li><a href="/about.html" class="navbar">Our Mission</a></li>
       <li><a href="/">Success Stories</a></li>
       <li><a href="/">Contribute</a></li>
