--- a/FoodForGardens/index.html
+++ b/FoodForGardens/index.html
@@ -24,8 +24,8 @@
     <div class="navbar">
       <div class="logo"><a href="#">Food For Gardens</a></div>
       <ul class="links">
-        <li><a href="FoodForGardens/">Home</a></li>
-      <li><a href="about.html" class="navbar">Our Mission</a></li>
+        <li><a href="#">Home</a></li>
+      <li><a href="/about.html" class="navbar">Our Mission</a></li>
       <li><a href="/">Success Stories</a></li>
       <li><a href="/">Contribute</a></li>
       <li><a href="/" class="btn2">Getting Started</a></li>
